@@ -1,7 +1,7 @@
 /* stdlib.h for libdfp and redirect to system stdlib.h
 
    Copyright (C) 2006 IBM Corporation.
-   Copyright (C) 2009 Free Software Foundation, Inc.
+   Copyright (C) 2009, 2011 Free Software Foundation, Inc.
 
    This file is part of the Decimal Floating Point C Library.
 
@@ -28,6 +28,7 @@
 
 #ifdef __STDC_WANT_DEC_FP__
 
+#include <features.h>
 #include <stddef.h>
 
 __BEGIN_DECLS
